# pii-proxy

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
src/piiproxy/: __main__.py  audit_log.py  config.py  dashboard.py  message_walker.py  request_logger.py  sanitizer.py  secret_key_recognizers.py  server.py  swedish_recognizers.py
tests/: test_message_walker.py  test_proxy_e2e.py  test_sanitizer.py  test_secret_key_recognizers.py  test_swedish_recognizers.py
